--- a/_includes/post.html
+++ b/_includes/post.html
@@ -1,3 +1,8 @@
+<style>
+	code{ 
+		overflow-x: scroll;
+	}
+</style>
 <div class="page-header">
   <h1>{{ page.title }} {% if page.tagline %}<small>{{page.tagline}}</small>{% endif %}</h1>
 </div>
